@@ -38,6 +38,13 @@ Trunk -  Unreleased
     HIVE-1066. Fix test outputs serde_typedbytes*.q
     (Zheng Shao via namit)
 
+    HIVE-1064. Null Pointer Exception in Hive CLI in distributed mode
+    (Carl Steinbach via Ning Zhang)
+
+    HIVE-1075. Make it possible for users to recover data when moveTask fails
+    (Zheng Shao via Ning Zhang)
+    
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
